Split out the data folder so that it is now individual volumes Added recommended memory settings for the JVM